# uk-property-cli

./: .gitignore  README.md  SKILL.md  compare.py  dedupe.py  fetch.sh  filter.py  pyproject.toml
parsers/: espc.py  rightmove.py  zoopla.py
tests/: test_cli_modules.py  test_dedupe.py  test_mcp_server.py
tests/fixtures/: espc_sample.html  rightmove_sample.html  zoopla_sample.md
uk_property_cli/: __init__.py  cli.py  compare.py  config.py  dedupe.py  filters.py  io.py  locations.py  mcp_server.py  schema.py  scoring.py
uk_property_cli/portals/: __init__.py  base.py  espc.py  rightmove.py  zoopla.py
